<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/baseAppBarCollapse"
        style="@style/AppBarLayout"
        android:background="@android:color/white">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/base_collapseToolbar"
            style="@style/CollapsingToolBar"
            app:contentScrim="@android:color/transparent"
            app:layout_scrollFlags="scroll">

            <LinearLayout
                android:id="@+id/layout_artists"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="8dp">

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/TextView.Header"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:padding="8dp"
                        android:text="@string/recommended_for_you" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/txt_seeAll"
                        style="@style/TextView.Clickable"
                        android:text="@string/see_all" />

                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_artists"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp" />

            </LinearLayout>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:id="@+id/layout_posts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/TextView.Header"
                android:padding="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/post_feed" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_posts"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                android:layout_margin="8dp" />


        </LinearLayout>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>